syntax = "proto3";

package com.cinemastore.mediaservice.grpc;

message MessageRequest {
  string id = 1;
}

message MessageResponse {
  bool status = 1;
  string title = 2;
}
